# json-logic-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  build-wheels.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml
js/: index.js  package-lock.json  package.json  webpack.config.js
py/: .gitignore  Dockerfile  Makefile  install-requires.txt  setup.py
py/jsonlogic/: __init__.py
py/jsonlogic_rs/: .gitignore  __init__.py
scripts/: build-all-linux-wheels.sh  newCargoVersion.sh  newNpmVersion.sh  newPypiVersion.sh
src/: bin.rs  data.rs  error.rs  func.rs  js_op.rs  lib.rs  op.rs  value.rs
src/op/: array.rs  data.rs  impure.rs  logic.rs  mod.rs  numeric.rs  string.rs
tests/: README.md  official_tests.rs  test_lib.rs  test_py.py  test_py.rs  test_wasm.js  test_wasm.rs
