[package]
name = "jsonlogic"
version = "0.1.0"
authors = ["Matthew Planchard <msplanchard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
python = ["cpython"]
wasm = ["wasm-bindgen"]

[dependencies]
phf = { version = "~0.8.0", features = ["macros"] }
serde_json = "~1.0.41"
thiserror = "~1.0.11"

[dependencies.wasm-bindgen]
version = "~0.2.62"
features = ["serde-serialize"]
optional = true

[dependencies.cpython]
version = "0.5"
features = ["extension-module"]
optional = true

[dev-dependencies.reqwest]
version = "~0.10.6"
features = ["blocking"]

