[package]
authors = ["Matthew Planchard <msplanchard@gmail.com>"]
categories = ["parsing", "wasm", "web-programming"]
description = "jsonlogic (jsonlogic.com) implemented in Rust"
edition = "2018"
homepage = "https://github.com/bestowinc/json-logic-rs"
keywords = ["json", "jsonlogic", "s-expressions", "web", "logic"]
license = "MIT"
name = "jsonlogic-rs"
readme = "README.md"
repository = "https://github.com/bestowinc/json-logic-rs"
version = "0.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# cdylib for CFFI and python integration
# lib for regular rust stuff
crate-type = ["cdylib", "lib"]

[[bin]]
name = "jsonlogic"
path = "src/bin.rs"
required-features = ["cmdline"]

[features]
cmdline = ["anyhow", "clap"]
default = []
python = ["cpython"]
wasm = ["wasm-bindgen"]

[dependencies]
phf = {version = "~0.8.0", features = ["macros"]}
serde_json = "~1.0.41"
thiserror = "~1.0.11"

[dependencies.wasm-bindgen]
features = ["serde-serialize"]
optional = true
version = "~0.2.62"

[dependencies.cpython]
features = ["extension-module"]
optional = true
version = "0.7"

[dependencies.anyhow]
optional = true
version = "~1.0.31"

[dependencies.clap]
optional = true
version = "~2.33.1"

[dev-dependencies.reqwest]
features = ["blocking"]
version = "~0.10.6"
